First Draft of Grokking Web Applications

--- a/grokking-web-applications.html
+++ b/grokking-web-applications.html
@@ -1,7 +1,33 @@
 ---
 layout: default
-title: A Gentle Introduction to Computer Programming
-subtitle: Entering the Mindset of a Programmer
+title: Grokking Web Applications
+subtitle: Untangling the Web
 tags:
-  - learning-to-learn
+  - web-applications
 ---
+A long time ago, 1966 to be precise, [two computers had a phone
+call](http://www.packet.cc/files/toward-coop-net.html). In 1967, a member of
+DARPA proposed we use [multiple computer networks for intercomputer
+communication](http://www.packet.cc/files/multi-net-inter-comm.html). The vision
+was bold. Computers all over the world could share data and computing resources!
+Thus began ARPANET. ARPANET connected a few computers at a well-funded
+miliatary and civilian research instittions.
+
+The initial design of the ARPANET, while revolutionary, was missing a key
+component. It didn't allow data to be shared across multiple networks! This
+meant that if you wanted to access data from the Stanford computers, you would
+need to connect to their network directly. If you wanted data from MIT, you woul
+have to connect to MIT. Imagine having to re-connect to the Internet every time
+you went to a different web site!
+
+In 1974, [a new protocol](http://www.cs.ucla.edu/classes/cs217/cerf74.pdf) was
+designed to solve the many isolated networks problem by introducing the concept
+of a gateway. Gateways connect networks to one another by providing a way to
+route data between the networks. By connecting your network to a gateway
+network, data could be sent from your network to MITs network to Stanfords
+network quickly and reliably!
+
+The number of connected machines grew tremendously. Notes from an experiment in
+Boston could be read by an associate in Berkeley. Researches could publish
+preliminary data and get feedback within days, instead of months. It was
+incredible!
